2008-03-23  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	add POSIX definitions

	* src/lib/evil.c:
	make realpath available with cegcc. The function
	just copy the file name to the resolved name with
	that compiler

2008-03-13  Vincent Torri  <doursse at users dot sf dot net>

	* INSTALL:
	* README:
	additional notes for compilations with cegcc or mingw32ce

	* configure.ac:
	use 'win32' instead of 'cegcc' or 'mingw'

	* src/lib/dlfcn/dlfcn.c (dlopen):
	cegcc does not support LOAD_WITH_ALTERED_SEARCH_PATH.
	Use LoadLibrary instead of LoadLibraryEx in that case.

2008-03-05  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c:
	cegcc or mingwce32 does not like relative path,
	so _fullpath or other similar function do not exist
	on Winodws mobile.

	* src/lib/mman/mman.c:
	missing #

2008-03-05  Vincent Torri  <doursse at users dot sf dot net>

	fix compilation with cegcc and minor fixing

	* COPYING:
	copyright update

	* configure.ac:
	* src/lib/Evil.h:
	* src/lib/dlfcn/dlfcn.h:
	* src/lib/mman/sys/mman.h:
	define EFL_EVIL_BUILD in config.h for managing correctly EAPI

	* src/bin/test_pipe.c:
	stdio.h is needed after winsock2.h for mingw32ce

	* src/lib/dlfcn/dlfcn.c (get_last_error), (dlopen), (dlsym):
	* src/lib/evil.c:
	fix some heafer files inclusion on cegc platform.
	first step of mingw32ce support

	* src/lib/mman/mman.c:
	define _get_osfhandle for mingw32ce

2008-03-03  Vincent Torri  <doursse at users dot sf dot net>

	* COPYING:
	* COPYING-PLAIN:
	* Makefile.am:
	update the COPYING file

2008-02-29  Vincent Torri  <doursse at users dot sf dot net>

	* AUTHORS:
	Add Tor Lillqvist as author as he kindly gave me
	the right to use his code for pipe(). Thanks a lot !

	* src/bin/test_dlfcn.c (main):
	read module and symbol from command line

	* src/bin/test_pipe.c (thread), (main):
	change output

	* src/lib/Evil.h:
	* src/lib/dlfcn/dlfcn.h: