@@ -283,22 +283,12 @@ EAPI int pipe(int *fds);
    (defined(_WIN32) && !defined(_UWIN) && !defined(__CYGWIN__) && !defined(__CEGCC__))
 # if defined(_MSC_VER) || defined(__MINGW32__)
 
-struct stat
-{
-	_dev_t	st_dev;		/* Equivalent to drive number 0=A 1=B ... */
-	_ino_t	st_ino;		/* Always zero ? */
-	_mode_t	st_mode;	/* See above constants */
-	short	st_nlink;	/* Number of links. */
-	short	st_uid;		/* User: Maybe significant on NT ? */
-	short	st_gid;		/* Group: Ditto */
-	_dev_t	st_rdev;	/* Seems useless (not even filled in) */
-	_off_t	st_size;	/* File size in bytes */
-	time_t	st_atime;	/* Accessed date (always 00:00 hrs local
-				 * on FAT) */
-	time_t	st_mtime;	/* Modified time */
-	time_t	st_ctime;	/* Creation time */
-};
-
+#  ifdef S_ISDIR
+#   undef S_ISDIR
+#  endif
+#  ifdef S_ISREG
+#   undef S_ISREG
+#  endif
 #  define S_ISDIR(m) (((m) & _S_IFMT) == _S_IFDIR)
 #  define S_ISREG(m) (((m) & _S_IFMT) == _S_IFREG)
 
